--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
 body {
-        background: aquamarine;
+    background:     #011627;
+}
+
+h1{
+    color: #2ec4b6;            
+    font-family: 'Times New Roman', Times, serif;
 }
